--- a/index.html
+++ b/index.html
@@ -42,6 +42,8 @@
         </div>
       </section>
 
+      <section id="break" class="break">
+      </section>
 
       <section id="two" class="main style2">
         <div class="container">
@@ -79,6 +81,9 @@
                   </div>
                 </div>
               </div>
+            </section>
+            
+            <section id="break" class="break">
             </section>
 
             <section id="three" class="main style1 special">
