--- a/index.html
+++ b/index.html
@@ -55,34 +55,37 @@
           <div class="row 150%">
             <div class="6u 12u$(medium)">
               <h3>Front End:</h3>
-              <p>HTML5, CSS3, SCSS, Bootstrap, Bulma</p>
+              <p>HTML5, CSS3, SCSS, Bootstrap, Bulma, Gulp</p>
 
               <h3>JavaScript:</h3>
               <p>React, ES6, AngularJS, MongoDB, Express.js,
                 Node.js, JSON, jQuery, AJAX, EJS</p>
 
                 <h3>Package Managers:</h3>
-                <p>npm, Yarn, Bower, Gulp</p>
+                <p>Yarn, Bower </p>
+
                 <h3>Server Side:</h3>
-                <p>Ruby (Sinatra, Ruby on Rails), Classic ASP,
-                  PostgreSQL, Mongo, MySQL, MSSQL</p>
+                <p>Ruby (Sinatra, Ruby on Rails),
+                  PostgreSQL, Mongo, MySQL </p>
                 </div>
 
                 <div class="6u 12u$(medium)">
                   <h3>Storage/Version Control:</h3>
                   <p>Git, Github, Heroku, AWS</p>
+
                   <h3>TDD:</h3>
                   <p>Mocha, Chai, Supertest, Istanbul</p>
+
                   <h3>Methodologies/Practices:</h3>
                   <p>Agile methodologies, RESTful web services, CRUD methods, MVC framework,
-                    pair programming, mobile first design principles, responsive web design</p>
+                    pair programming, responsive web design</p>
                     <h3>Other:</h3>
                     <p>Trello, Sketch, standups, presentation and communication skills</p>
                   </div>
                 </div>
               </div>
             </section>
-            
+
             <section id="break" class="break">
             </section>
 
@@ -102,7 +105,7 @@
                     </ul>
                   </div>
                   <div class="4u 12u$(medium)">
-                    <span class="image fit"><img src="images/womensservices.jpg" alt="" /></span>
+                    <span class="image fit"><img src="images/ws.jpg" alt="" /></span>
                     <h3>Women’s Services</h3>
                     <p>An app to rate women's services (pregnancy support, sexual health and contraception, domestic and sexual abuse) to enable women to choose a service not solely based on location but on how they were treated and the quality of advice they received.</p>
                     <ul class="actions">
@@ -110,7 +113,7 @@
                     </ul>
                   </div>
                   <div class="4u 12u$(medium)">
-                    <span class="image fit"><img src="images/GAFeedback.jpg" alt="" /></span>
+                    <span class="image fit"><img src="images/GA.jpg" alt="" /></span>
                     <h3>GA Feedback</h3>
                     <p>GA's Web Development Immersive course is fast-paced and challenging, and so to benefit the class as well as inform the teachers planning, we created a feedback platform in a team of four.</p>
                     <ul class="actions">
