--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
               <header class="major">
                 <h2>About Me</h2>
               </header>
-              <p>I want to become a developer to create positive social change. Technology has the potential to educate, transform the third sector and ensure transparency. </p>
+              <p>I became a developer to positively affect social change. Technology has the potential to educate, transform the third sector and ensure transparency. </p>
   <p>I am fascinated by the power of technology in conjunction with education. I hope to build on the skills I have learnt as a teacher and make a full contribution to the team I am working with.</p>
   <p>In order to successfully work towards these goals, I want to learn as much as possible from the best in the next few years, whilst working on a wicked product.
 </p>
